# dfmp

./: .coveragerc  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
demo/: demo.ipynb
dfmp/: __init__.py  chart.py  silhouette.py
pictogram_people/: __init__.py  chart.py  config.py  silhouette_data.npz
scripts/: extract_silhouettes.py
tests/: conftest.py  test_chart.py  test_config.py  test_silhouette.py
